fix(styles): increase body font size to improve readability

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,6 +99,7 @@ body {
   cursor: pointer;
   padding: 0;
   margin: 0;
+  font-size: 1em;
 }
 
 .header-nav .dropdown-content {
